--- a/assets/css/elementes.css
+++ b/assets/css/elementes.css
@@ -1,9 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html{
+
+html {
     font-size: 62.5%;
     scroll-behavior: smooth;
 }
@@ -11,43 +12,56 @@ html{
 /* font-family: 'Montserrat', sans-serif; */
 /* font-family: 'open Sans', sans-serif; */
 
-body{
+body {
     font-family: 'open Sans', sans-serif;
     font-size: 2rem;
     color: var(--primary-color);
     line-height: 1.5;
-    
-}
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Montserrat', sans-serif; 
+
 }
 
-h1{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
     font-size: 6rem;
     text-transform: uppercase;
 }
-h2 h2 {
-    font-size: 6rem;
-    margin-bottom: 5rem ;
+
+h2 {
+    font-size: 5rem;
+    margin-bottom: 0;
     text-transform: uppercase;
     line-height: 1.2;
+    text-align: center;
+    margin-top: 0;
 }
-h3{
+
+h3 {
     font-size: 4rem;
-   
+
 }
-h4{
+
+h4 {
     font-size: 3rem;
-    
+
 }
-h5{
+
+h5 {
     font-size: 2rem;
-    
+
 }
 
 a {
     text-decoration: none;
 }
+
 p {
     margin-bottom: 3rem;
 }
@@ -71,13 +85,30 @@ table caption {
     margin-bottom: 1rem;
 }
 
-table td, table th {
+table td,
+table th {
     white-space: nowrap;
-    padding:1rem;
+    padding: 1rem;
     text-align: left;
-    border: 0.1rem solid var(--light-gray-color);
+    border: 0.1rem solid rgb(49, 39, 27);
 }
 
-tfoot td, table th {
+tfoot td,
+table th {
     background: var(--light-gray-color);
+}
+
+div#div {
+    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-left: 700px;
+    width: 80%;
+
+}
+
+button#selecion {
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    width: 5rem;
+    height: 5rem;
 }
