--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color:#330033;
     --white-color:#ffffff; 
-    --light-gray-color:#eeeeee;
+    --light-gray-color:#d7b9e3;
     --secondary-color: crimson;
     --gap:3rem;
 
