--- a/assets/css/elementes.css
+++ b/assets/css/elementes.css
@@ -98,17 +98,19 @@ table th {
     background: var(--light-gray-color);
 }
 
-div#div {
+.main-d{
     margin-bottom: 50px;
     margin-top: 30px;
     margin-left: 700px;
     width: 80%;
-
+    
 }
 
 button#selecion {
-    margin-left: 1rem;
-    margin-bottom: 1rem;
+  margin: 1rem 0rem 1rem 1rem;
     width: 5rem;
     height: 5rem;
 }
+
+input {width: 40%;} 
+input,  button {padding: 10px;}
