--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,11 @@
 .intro-content {
     position: relative;
-    /*top: 7rem;*/
+    left: 30rem;
+    top: 1rem;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
-    min-height: 100vh;
+    min-height: 10vh;
 
 }
 
